Release v0.3.2
